--- a/react_playground/src/components/base/Card/EasyCard/index.module.scss
+++ b/react_playground/src/components/base/Card/EasyCard/index.module.scss
@@ -13,6 +13,7 @@
 
   &:hover {
     transform: translate(-0.5rem, -1rem) rotate(3deg);
+    cursor: pointer;
   }
 
   &:hover ~ .card {
@@ -29,40 +30,42 @@
   }
 
   .category {
-    font-size: 0.8em;
-    color: #888;
+    display: block;
+    margin: 0 0 0.25rem 0;
+    color: #777;
   }
 
   .title {
-    margin: 10px 0;
-    color: #fff;
+    font-size: 1.3rem;
+    margin: 0 0 1rem 0;
   }
 
-  .meta {
-    display: flex;
+  .tags {
+    margin: 0 0 0.5rem 0;
+    a {
+      font-style: normal;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #ff7a18;
+      font-size: 0.66rem;
+      -webkit-margin-end: 0.66rem;
+      margin-inline-end: 0.66rem;
+    }
+  }
+
+  .author_row {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    gap: 0.5rem;
     align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .tag {
-    background: #444;
-    color: #ff8c00;
-    padding: 2px 6px;
-    border-radius: 4px;
-    font-size: 0.7em;
-    margin-right: 10px;
-    margin-bottom: 5px;
-  }
-
-  .author-avatar {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-
-  .author-name {
-    color: #ccc;
-    font-size: 0.9em;
+    color: #565656;
+    line-height: 1.3;
+    padding-top: 0.5rem;
+    .avatar {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
   }
 }
