--- a/react_playground/src/assets/css/index.css
+++ b/react_playground/src/assets/css/index.css
@@ -15,3 +15,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+canvas {
+  margin: 0 auto;
+  width: 70% !important;
+  height: 70% !important;
+}
