--- a/react_playground/src/components/base/Loading/index.module.scss
+++ b/react_playground/src/components/base/Loading/index.module.scss
@@ -1,6 +1,7 @@
 .loading_wrapper {
   position: relative;
-  height: 99vh;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
