fix: particle style

--- a/react_playground/src/components/base/Card/EasyCard/index.module.scss
+++ b/react_playground/src/components/base/Card/EasyCard/index.module.scss
@@ -81,5 +81,8 @@
       top: 10px;
       left: 20px;
     }
+    :global(.particle) {
+      transform: scale3d(4, 4, 4) !important;
+    }
   }
 }
