feat: Code detail

--- a/react_playground/src/components/base/Card/EasyCard/index.module.scss
+++ b/react_playground/src/components/base/Card/EasyCard/index.module.scss
@@ -84,5 +84,8 @@
     :global(.particle) {
       transform: scale3d(4, 4, 4) !important;
     }
+    :global(.code_container_preview) {
+      width: 300px;
+    }
   }
 }
