--- a/react_playground/src/components/MemoryTrail/index.module.scss
+++ b/react_playground/src/components/MemoryTrail/index.module.scss
@@ -1,61 +1,84 @@
-.memoryTrail {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+.wrapper {
   position: relative;
-  padding-left: 20px;
-}
+  .memoryTrail {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    padding-left: 20px;
 
-.memoryNode {
-  display: flex;
-  align-items: center;
-  opacity: 0;
-  animation: fadeIn 1s forwards;
-  position: relative;
-  margin-bottom: 20px;
-  animation-delay: calc(var(--index) * 1.5s);
-}
+    .memoryNode {
+      display: flex;
+      align-items: center;
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+      position: relative;
+      margin-bottom: 20px;
 
-.dot {
-  width: 10px;
-  height: 10px;
-  background-color: #000;
-  border-radius: 50%;
-  position: absolute;
-  left: -20px;
-  z-index: 1;
-}
+      .dot {
+        width: 10px;
+        height: 10px;
+        background-color: #000;
+        border-radius: 50%;
+        position: absolute;
+        left: -19px;
+        z-index: 1;
+      }
 
-.content {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-}
+      .content {
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
 
-.content img {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
-  transition: transform 0.3s ease;
-}
+        img {
+          width: 50px;
+          height: 50px;
+          margin-right: 10px;
+          transition: transform 0.3s ease;
 
-.content img:hover,
-.content img:focus {
-  transform: scale(1.5);
-}
+          &:hover,
+          &:focus {
+            transform: scale(1.5);
+          }
+        }
 
-.content p {
-  margin: 0;
-}
+        p {
+          margin: 0;
+        }
+      }
 
-.line {
-  width: 2px;
-  background-color: #000;
-  position: absolute;
-  left: -15px;
-  top: 10px;
-  height: 0;
-  animation: growLine 1.5s forwards;
+      .line {
+        width: 2px;
+        background-color: #000;
+        position: absolute;
+        left: -15px;
+        top: 10px;
+        height: 0;
+        animation: growLine 1.5s forwards;
+      }
+    }
+  }
+
+  .controls {
+    position: absolute;
+    top: 0;
+    right: 500px;
+
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+    button {
+      margin: 0 10px;
+      border: 1px solid #000;
+    }
+
+    input {
+      width: 50px;
+      text-align: center;
+      border: 1px solid #000;
+    }
+  }
 }
 
 @keyframes growLine {
